add post commit task to update sample type search index